--- a/endeal.html
+++ b/endeal.html
@@ -1,17 +1,46 @@
 <head>
     <title>Endeal</title>
-    <link type="text/css" rel="stylesheet" href="./bower_components/angular-material/angular-material.css">
-    <link type="text/css" rel="stylesheet" href="endeal.styl">
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 </head>
+
 <body>
-    <script src="./endeal.coffee"></script>
-    <script src="./client/views/home.coffee"></script>
-    <script src="./client/views/products.coffee"></script>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-animate.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-aria.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.8.3/angular-material.min.js"></script>
-
-    <div ng-app="endeal" ng-include="'client/views/home.ng.html'"></div>
 </body>
+
+<template name="page">
+    <header class="red lighten-1">
+        <nav class="red lighten-1">
+            <div class="container">
+                <div class="nav-wrapper">
+                    <a href="/">
+                        <img class="logo reponsive-img hide-on-med-and-down" src="/images/logo.png"/> 
+                    </a>
+                    <a href="/" class="brand-logo"> Endeal</a>
+                    <a href="#" data-activates="collapsable-menu" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
+                    <ul class="right hide-on-med-and-down">
+                        <li><a href="/products">Products</a></li>
+                        <li><a href="/about">About</a></li>
+                        <li><a href="/connect">Connect</a></li>
+                        <li><a href="/jobs">Jobs</a></li>
+                    </ul>
+                    <ul class="side-nav" id="collapsable-menu">
+                        <li><a href="/products">Products</a></li>
+                        <li><a href="/about">About</a></li>
+                        <li><a href="/connect">Connect</a></li>
+                        <li><a href="/jobs">Jobs</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+        {{> yield "content"}}
+    </main>
+    <footer class="page-footer red lighten-1">
+        <div class="container">
+            <div class="row">
+                <h6 class="right grey-text text-lighten-3">1480 Olympic Street, Simi Valley CA 93063 <i class="mdi-social-location-city"></i></h6>
+            </div>
+        </div>
+    </footer>
+</template>
