--- a/endeal.html
+++ b/endeal.html
@@ -8,8 +8,8 @@
 </body>
 
 <template name="page">
-    <header class="red lighten-1">
-        <nav class="red lighten-1">
+    <header>
+        <nav class="red darken-2">
             <div class="container">
                 <div class="nav-wrapper">
                     <a href="/">
@@ -36,7 +36,7 @@
     <main>
         {{> yield "content"}}
     </main>
-    <footer class="page-footer red lighten-1">
+    <footer class="page-footer red darken-2">
         <div class="container">
             <div class="row">
                 <h6 class="right grey-text text-lighten-3">1480 Olympic Street, Simi Valley CA 93063 <i class="mdi-social-location-city"></i></h6>
